--- a/package.json
+++ b/package.json
@@ -13,21 +13,26 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.19.2",
+    "buffer": "^5.6.0",
     "expo": "~38.0.8",
     "expo-av": "~8.2.1",
     "expo-constants": "~9.1.1",
     "expo-file-system": "~9.0.1",
     "expo-image-picker": "~8.3.0",
+    "expo-linear-gradient": "~8.2.1",
     "expo-media-library": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "file-saver": "^2.0.2",
     "firebase": "7.9.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-base64": "^0.1.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-picker": "^2.3.3",
     "react-native-screens": "~2.9.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^5.1.0-alpha7",
     "react-native-web": "~0.11.7",
