--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-base64": "^0.1.0",
+    "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-picker": "^2.3.3",
     "react-native-screens": "~2.9.0",
